<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>domain10</class>
 <widget class="QWidget" name="domain10">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>360</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QWidget" name="">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>20</y>
     <width>351</width>
     <height>301</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
           <string>preamble :</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="lEditPreamble">
          <property name="inputMask">
           <string>bbbbbbbbbbbbbbbbbbbbbbbb</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
           <string>id :</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="lEditId">
          <property name="inputMask">
           <string>bbbbbbbbbbbbbbbb</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QLabel" name="label_3">
          <property name="text">
           <string>type :</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="lEditType">
          <property name="inputMask">
           <string>bbbb</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
         <widget class="QLabel" name="label_4">
          <property name="text">
           <string>sync pattern : </string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="lEditSyncPattern">
          <property name="inputMask">
           <string>bbbbbbbbbbbbbbbb</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
         <widget class="QLabel" name="label_5">
          <property name="text">
           <string>sync mask : </string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="lEditSyncMask">
          <property name="inputMask">
           <string>bbbbbbbbbbbbbbbb</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QPushButton" name="btnConfirm10">
      <property name="text">
       <string>确定</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
